--- a/DropBear.Blazor/DropBear.Blazor.csproj
+++ b/DropBear.Blazor/DropBear.Blazor.csproj
@@ -6,6 +6,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Version>2024.7.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>DropBear.Blazor</PackageId>
+    <Authors>Terrence Kuchel (DropBear)</Authors>
+    <Company>Terrence Kuchel (DropBear)</Company>
+    <Description>Custom Blazor components and UI elements</Description>
+    <PackageTags>blazor;components;ui;dropbear</PackageTags>
   </PropertyGroup>
 
 
@@ -19,6 +24,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.7"/>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Components\"/>
+    <Folder Include="wwwroot\scripts\"/>
+    <Folder Include="wwwroot\styles\"/>
   </ItemGroup>
 
   <ItemGroup>
