Added new ValidationErrorsComponent.razor

--- a/DropBear.Blazor/DropBear.Blazor.csproj
+++ b/DropBear.Blazor/DropBear.Blazor.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DropBear.Codex.Validation" Version="2024.7.1" />
     <PackageReference Include="Meziantou.DotNet.CodingStandard" Version="1.0.125">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -27,7 +28,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Components\"/>
     <Folder Include="wwwroot\scripts\"/>
     <Folder Include="wwwroot\styles\"/>
   </ItemGroup>
