Removed Modal Service as it was not offering anything better than current modal implementations available for blazor.

--- a/DropBear.Blazor/DropBear.Blazor.csproj
+++ b/DropBear.Blazor/DropBear.Blazor.csproj
@@ -36,4 +36,9 @@
     <Folder Include="Utilities\"/>
   </ItemGroup>
 
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Components\Modals\DropBearModal.razor" />
+    <UpToDateCheckInput Remove="Components\Modals\DropBearModalContainer.razor" />
+  </ItemGroup>
+
 </Project>
